test-policies-pass/validating/variables-composition/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: variables-composition-binding
spec:
  policyName: variables-composition
  validationActions: [Deny, Audit]
